--- a/AngularApp/projects/applens/src/styles.scss
+++ b/AngularApp/projects/applens/src/styles.scss
@@ -173,3 +173,7 @@ body {
 highcharts-chart {
     overflow: visible!important;
 }
+
+fab-command-bar .ms-SearchBox {
+    border-width: 0px!important;
+}
