--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/category-overview/category-overview.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/category-overview/category-overview.component.html
@@ -2,8 +2,15 @@
   <items>
     <fab-command-bar-item key="askGenie" text="Ask Genie" [iconProps]="{ iconName: 'Help' }" (click)="isOpen=!isOpen"
       data-track-type="run"></fab-command-bar-item>
-    <fab-command-bar-item key="timePicker" [text]="time" [iconProps]="{ iconName: 'Clock' }"
+    <fab-command-bar-item #timepicker key="timePicker" [text]="time" [iconProps]="{ iconName: 'Clock' }"
       (click)="showCalendar = !showCalendar">
+      <!-- <render>
+        <ng-template let-item="item1">
+          <div style="padding-top:3px!important;">
+            <fab-search-box placeholder="Search"></fab-search-box>
+          </div>
+        </ng-template>
+      </render> -->
       <contextual-menu-item key="Last1Hour" text="Last 1 Hour" [iconProps]="{ iconName: 'RadioBtnOff' }">
       </contextual-menu-item>
       <contextual-menu-item key="Last6Hours" text="Last 6 Hours" [iconProps]="{ iconName: 'RadioBtnOff' }">
@@ -12,21 +19,49 @@
       </contextual-menu-item>
       <contextual-menu-item key="Last24Hours" text="Last 24 Hours" [iconProps]="{ iconName: 'RadioBtnOn' }">
       </contextual-menu-item>
-      <contextual-menu-item key="custom" text="Custom" [iconProps]="{ iconName: customIcon }" (click)="setText()">
+      <!-- (click)="setText($event)" -->
+      <contextual-menu-item #custom key="custom" text="Custom" [iconProps]="{ iconName: customIcon }" [itemProps]="itemProps1" (onMouseOver)="onMouseOverEventHandler($event)" (onClick)="onClickEventHandler($event)" (click)="setText($event, $item)" >
+        <contextual-menu-item key="item-2-1" text="Start Time">
+            <fab-date-picker
+            [strings]="dates"
+            [minDate]="minDate"
+            [maxDate]="maxDate"
+            placeholder="Select a date..."
+            ariaLabel="Select start date"
+            allowTextInput="true"
+            showMonthPickerAsOverlay="true"
+            >
+            </fab-date-picker>
+          <fab-masked-text-field maxLength="10" [(value)]="startClock" [iconProps]="{iconName: 'Clock'}" [mask]="'99:99'" [maskChar]="'-'" [validateOnFocusOut]="true" [getErrorMessage]="getErrorMessageOnTextField"></fab-masked-text-field>
+        </contextual-menu-item>
+    <contextual-menu-item key="item-2-2" text="End Time"></contextual-menu-item>
       </contextual-menu-item>
       <contextual-menu-item *ngIf="customizeTime" key="timeDivider" itemType="timerDivider"></contextual-menu-item>
-      <contextual-menu-item key="startTime" text="Start Time" [iconProps]="{ iconName: 'DateTime' }">
+      <contextual-menu-item *ngIf="customizeTime" key="startTime" text="Start Time" [iconProps]="{ iconName: 'DateTime' }">
       </contextual-menu-item>
       <contextual-menu-item *ngIf="customizeTime" key="endTime" text="End Time" [iconProps]="{ iconName: 'DateTime' }"></contextual-menu-item>
     </fab-command-bar-item>
     <fab-command-bar-item key="refresh" text="Refresh" [iconProps]="{ iconName: 'Refresh' }" (click)="refresh()">
+    <render>
+      <ng-template>
+        <fab-default-button text="Refresh" (onClick)="showChoices =!showChoices">
+        <fab-callout [hidden]="showChoices">
+        <fab-choice-group
+        [options]="choiceGroupOptions"
+        [styles]="dropdownStyles"
+        [selectedKey]="selectedItem && selectedItem.key"
+        ></fab-choice-group>
+      </fab-callout>
+    </fab-default-button>
+      </ng-template>
+    </render>
     </fab-command-bar-item>
     <fab-command-bar-item key="sendFeedback" text="Feedback" [iconProps]="{ iconName: 'Emoji2' }"
       (click)="sendFeedback()"></fab-command-bar-item>
     <fab-command-bar-item key="search" text="Search" [iconProps]="{ iconName: 'Search' }" (click)="showSearch()">
       <span class="ms-SearchBox-text">Search</span>
     </fab-command-bar-item>
-    <fab-command-bar-item key="custom" text="custom text" (click)="onCopyClicked()">
+    <fab-command-bar-item key="custom1" text="custom text" (click)="onCopyClicked()">
       <render>
         <ng-template let-item="item">
           <div style="padding-top:3px!important;">
@@ -87,12 +122,13 @@
             allowTextInput="true" -->
 
   <far-items>
-      <fab-command-bar-item key="custom" text="custom text" (click)="onCopyClicked()">
+      <fab-command-bar-item key="custom2" text="custom text" (click)="onCopyClicked()">
           <render>
             <ng-template let-item="item">
               <div style="padding-top:3px!important;">
 
               <fab-dropdown
+              [styles]="dropdownStyles"
               [label]="'test label'"
               [selectedKey]="selectedItem && selectedItem.key"
               [selectedKey]="Last24H"
@@ -138,7 +174,7 @@
             </ng-template>
           </render>
         </fab-command-bar-item>
-    <fab-command-bar-item key="custom" text="custom text" (click)="onCopyClicked()">
+    <fab-command-bar-item key="custom3" text="custom text" (click)="onCopyClicked()">
       <render>
         <ng-template let-item="item">
           <div style="padding-top:3px!important;">
