--- a/AngularApp/projects/app-service-diagnostics/src/styles.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/styles.scss
@@ -106,3 +106,47 @@ highcharts-chart {
 fab-command-bar .ms-SearchBox {
     border-width: 0px!important;
 }
+
+.ms-Callout-container .ms-Callout {
+    overflow-y: hidden!important;
+    right: 20px!important;
+    top: 50px!important;
+    padding: 10px!important;
+    left: unset!important;
+    background-color: white!important;
+    width: 270px;
+}
+
+.ms-Callout-container .ms-Callout-main {
+    overflow-y: hidden!important;
+}
+
+
+.ms-Callout-container fab-date-picker {
+    padding-right:0px!important;
+}
+
+.ms-Callout-container fab-masked-text-field {
+    padding-left:0px!important;
+}s
+
+.ms-CommandBar {
+    height: 34px;
+}
+.ms-CommandBar, .ms-Button--commandBar{
+    background-color: white!important;
+}
+
+.ms-Button--commandBar :hover {
+    background-color: rgba(85, 179, 255, 0.1);
+}
+
+.fab-command-bar {
+    border-bottom: 1px solid rgb(204, 204, 204)!important;
+    font-size: 12px!important;
+    height: 34px;
+}
+
+
+
+
