--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/category-overview/category-overview.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/category-overview/category-overview.component.scss
@@ -60,4 +60,10 @@
     overflow-y: hidden;
 }
 
+.fab-command-bar-class {
+    border-bottom: 1px solid rgb(204, 204, 204)!important;
+    font-size: 12px!important;
+    height: 34px;
+}
+
 
